Added openstackx. Some small tweaks so that all the services and run

--- a/modules/glance/templates/glance-api.conf.erb
+++ b/modules/glance/templates/glance-api.conf.erb
@@ -52,7 +52,7 @@ rabbit_notification_topic = glance_notifications
 # Directory that the Filesystem backend store
 # writes image data to
 #filesystem_store_datadir = %DEST%/glance/images/
-filesystem_store_datadir = /var/lib/glance/images/
+filesystem_store_datadir = /opt/stack/glance/images/
 
 # ============ Swift Store Options =============================
 
