--- a/modules/nova/templates/nova.conf.erb
+++ b/modules/nova/templates/nova.conf.erb
@@ -4,7 +4,7 @@
 --dhcpbridge_flagfile=/opt/stack/nova/bin/nova.conf
 --fixed_range=10.0.0.0/24
 --network_manager=nova.network.manager.FlatDHCPManager
---my_ip=10.59.62.96
+--my_ip=<%= ipaddress_eth0 %>
 --public_interface=eth0
 --vlan_interface=eth0
 --sql_connection=mysql://root:<%= mysql_password %>@localhost/nova
@@ -16,9 +16,9 @@
 #--vncproxy_wwwroot=/opt/stack/noVNC/
 --api_paste_config=/opt/stack/nova/bin/nova-api-paste.ini
 --image_service=nova.image.glance.GlanceImageService
---ec2_dmz_host=10.59.62.96
+--ec2_dmz_host=<%= ipaddress_eth0 %>
 --rabbit_host=localhost
---glance_api_servers=10.59.62.96:9292
+--glance_api_servers=1<%= ipaddress_eth0 %>:9292
 --force_dhcp_release
 --flat_network_bridge=br100
 --flat_interface=eth0
